--- a/pages/services.html
+++ b/pages/services.html
@@ -73,7 +73,9 @@
 	  			<img id="services_img01" src="../img/collage-04.jpg" alt="">
 	  			I work with adolescents, young adults, and adults who want to understand themselves more deeply and explore what a meaningful, fulfilling life might look like. Together, we identify the obstacles holding you back and develop insights and strategies to move forward—whether in relationships, career, or personal growth.
 	  			I have a particular interest in working with:
-	  			Young adults trying to find their way (sometimes, perhaps pejoratively, referred to as “failure to launch”)
+	  			<br><br>
+
+	  			&#8226; Young adults trying to find their way (sometimes, perhaps pejoratively, referred to as “failure to launch”)
 	  			<br><br>
 
 
