--- a/pages/contact.html
+++ b/pages/contact.html
@@ -81,7 +81,7 @@
 	  			<br>
 	  			Cambridge, MA 02138
 	  			<br><br><br>
-	  			You are also welcome to schedule a session via my <a href="https://care.headway.co/providers/daniel-katz" target="_blank" style="text-decoration:none;color:#222"><span class="headway" style="font-weight:bold;font-style:italic;">Headway</span></a> and <a href="https://www.zocdoc.com/practice/daniel-katz-therapy-154693?lock=true&isNewPatient=false&referrerType=widget" target="_blank" style="text-decoration:none;color:#222"><span class="Zocdoc" style="font-weight:bold;font-style:italic;">Zocdoc</span></a> page.
+	  			You are also welcome to schedule a session via my <a href="https://care.headway.co/providers/daniel-katz" target="_blank" style="text-decoration:none;color:#222"><span class="headway" style="font-weight:bold;font-style:italic;">Headway</span></a> page.
 	  		</p>
 	  	</div>
 		
