--- a/pages/services.html
+++ b/pages/services.html
@@ -70,12 +70,12 @@
 	  	<div class="main-text">
 	  		<p>
 	  			<div class="services_headers">Individual Therapy</div>
-	  			<img id="services_img01" src="../img/collage-04.jpg" alt="">
-	  			I work with adolescents, young adults, and adults who want to understand themselves more deeply and explore what a meaningful, fulfilling life might look like. Together, we identify the obstacles holding you back and develop insights and strategies to move forward—whether in relationships, career, or personal growth.
+	  			<!-- <img id="services_img01" src="../img/collage-04.jpg" alt=""> -->
+	  			I work with adolescents, young adults, and adults who want to understand themselves more deeply and discover a more meaningful, fulfilling life. Together, we identify obstacles and form insights and strategies to move forward &mdash; in relationships, career, or personal growth.
 	  			I have a particular interest in working with:
 	  			<br><br>
 
-	  			&#8226; Young adults trying to find their way (sometimes, perhaps pejoratively, referred to as “failure to launch”)
+	  			&#8226; Young adults trying to find their way
 	  			<br><br>
 
 
@@ -98,16 +98,16 @@
 
 
 	  			<div class="services_headers">Couples Therapy</div>
-	  			<img id="services_img02" src="../img/collage-02.jpg" alt="">
-	  			I trained extensively in couples therapy at the prestigious Family Institute at Northwestern University. I primarily draw from Emotionally Focused Therapy (EFT), which helps couples identify, express, and respond to each other’s emotional experiences in the moment. EFT focuses on deepening emotional connection, improving communication, and creating a secure, supportive bond between partners.
+	  			<!-- <img id="services_img02" src="../img/collage-02.jpg" alt=""> -->
+	  			I trained extensively in couples therapy at the prestigious <span style="font-style:italic;">Family Institute</span> at Northwestern University. I primarily draw from Emotionally Focused Therapy (EFT), which helps couples identify, express, and respond to each other’s emotional experiences in the moment. EFT focuses on deepening emotional connection, improving communication, and creating a secure, supportive bond between partners.
 	  			<br><br>
-	  			I like to start with a four-session intake process, meeting with couples together and then individually. This helps me better understand your relationship dynamics and clarify your goals for therapy.
+	  			I start with a four-session intake process, meeting with couples together and then individually. This helps me better understand your relationship dynamics and clarify your goals for therapy.
 	  			My philosophy is simple: <span style="font-style: italic;">let’s go with what works for you</span>. Some sessions focus on practical skills—like creating rules of engagement when conflict is high—while others focus on building intimacy, connection, and understanding. The goal is to strengthen the relationship while creating a safe and supportive space for both partners.
 	  			<br><br>
 	  			<hr style="margin-bottom:2em;opacity:0.3;">
 
 	  			<div class="services_headers">Group Therapy</div>
-	  			<img id="services_img03" src="../img/collage-05.jpg" alt="">
+	  			<!-- <img id="services_img03" src="../img/collage-05.jpg" alt=""> -->
 	  			I’m excited to be opening multiple interpersonal process groups in the near future. These groups will provide a supportive environment to explore relationship patterns, communication, and emotional growth with others. Stay tuned for more details!
 	  			<br><br><br><br><br><br><br><br><br>
 	  		</p>
