--- a/pages/about.html
+++ b/pages/about.html
@@ -69,17 +69,17 @@
 
 	  	<div class="main-text">
 	  		<p>
-	  			<img id=bio_pic src="../img/bio_pic2.jpeg" alt=""><span class="spread bio"><span class="big_letter">F</span>rom a young age,</span> I was deeply curious about people. Before I had the language to ask the questions on my mind, I wondered quietly about my friends and their inner worlds. That early curiosity never faded. With time, I learned how to ask, how to listen, and how to understand what life feels like from someone else’s perspective. This early interest has become my professional concentration and a source of great personal satisfaction.
+	  			<img id=bio_pic src="../img/bio_pic2.jpeg" alt=""><span class="spread bio"><span class="big_letter">F</span>rom a young age,</span> I was deeply curious about people and wondered quietly about my friends and their inner worlds. That early curiosity never faded. With time, I learned how to better inquire, listen, and understand what life might feel like from someone else’s perspective. That early fascination has become my professional concentration and a source of great personal satisfaction.
 	  			<br><br>
 
-				I earned a doctorate in clinical psychology to deepen this ability and to learn how reflection, presence, and thoughtful guidance can support real change. Working in correctional and rehabilitation settings showed me that people sometimes need more than empathy; they often need practical tools and steady guidance. I broadened my approach with skills-based strategies and learned to gently challenge and offer alternative perspectives.
+				I earned a doctorate in clinical psychology to deepen this ability and to learn how reflection, presence, and thoughtful guidance can support real change. Working in correctional and rehabilitation settings showed me that people need more than empathy; they often need practical tools and steady guidance. I broadened my approach with skills-based strategies and learned to gently challenge and offer alternative perspectives.
 				<br><br>
 				
-				During my residency at a psychiatric hospital in Massachusetts and later at Northwestern University’s The Family Institute, I saw that while many struggles are shared, each person lives them in a distinct way. My work is to understand the whole person in ways that go beyond a clinical description and tailor therapy to their history, needs, and temperament.
+				During my residency at a psychiatric hospital in Massachusetts and later at Northwestern University’s <span style="font-style:italic;">The Family Institute</span>, I saw that while many struggles are shared, every person's lived experience is distinct. My work is to understand the <span style="font-style:italic;">whole person</span>, beyond a clinical description, and to tailor therapy to one's history, needs, temperament, and goals.
 				<br><br>
 
 
-				Today, I draw from a range of evidence-based approaches—Acceptance and Commitment Therapy, psychodynamic therapy, Emotionally Focused Therapy, and Internal Family Systems. My philosophy is straightforward: focus on the individual, identify what’s helpful together, and adapt as we go.
+				Today, I draw from a range of evidence-based approaches—Acceptance and Commitment Therapy, psychodynamic therapy, Emotionally Focused Therapy, and Internal Family Systems. My philosophy is straightforward: focus on the individual, identify what is helpful together, and adapt as we go forward.
  				<br><br>
 
 				<hr style="opacity:0.3;">
