--- a/pages/about.html
+++ b/pages/about.html
@@ -45,9 +45,12 @@
 	  	    </div>
 	  	  </div>
 
-	  	  <ul class="options">
+	  	  <ul class="options disable_scrollbar">
 	  	    <li class="option">
 	  	      <a href="../index.html"><span class="option-text">Home</span></a>
+	  	    </li>
+	  	    <li class="option">
+	  	      <a href="about.html"><span class="option-text">About</span></a>
 	  	    </li>
 	  	    <li class="option">
 	  	      <a href="services.html"><span class="option-text">Services</span></a>
@@ -66,7 +69,7 @@
 	  	    </li>
 	  	  </ul>
 	  	</div>
-
+	  	
 	  	<div class="main-text">
 	  		<p>
 	  			<img id=bio_pic src="../img/bio_pic2.jpeg" alt=""><span class="spread bio"><span class="big_letter">F</span>rom a young age,</span> I was deeply curious about people and wondered quietly about my friends and their inner worlds. That early curiosity never faded. With time, I learned how to better inquire, listen, and understand what life might feel like from someone else’s perspective. That early fascination has become my professional concentration and a source of great personal satisfaction.
@@ -79,7 +82,7 @@
 				<br><br>
 
 
-				Today, I draw from a range of evidence-based approaches—Acceptance and Commitment Therapy, psychodynamic therapy, Emotionally Focused Therapy, and Internal Family Systems. My philosophy is straightforward: focus on the individual, identify what is helpful together, and adapt as we go forward.
+				Today, I draw from a range of evidence-based approaches—Acceptance and Commitment Therapy, psychodynamic therapy, Emotionally Focused Therapy, and Internal Family Systems. My philosophy is straightforward: focus on the individual, identify what is helpful together, and adapt as we learn more.
  				<br><br>
 
 				<hr style="opacity:0.3;">
