--- a/pages/contact.html
+++ b/pages/contact.html
@@ -45,7 +45,7 @@
 	  	    </div>
 	  	  </div>
 
-	  	  <ul class="options">
+	  	  <ul class="options disable_scrollbar">
 	  	    <li class="option">
 	  	      <a href="../index.html"><span class="option-text">Home</span></a>
 	  	    </li>
@@ -64,9 +64,12 @@
 	  	    <li class="option">
 	  	      <a href="faq.html"><span class="option-text">FAQ</span></a>
 	  	    </li>
+	  	    <li class="option">
+	  	      <a href="contact.html"><span class="option-text">Contact</span></a>
+	  	    </li>
 	  	  </ul>
-	  	</div>
-
+	  	</div>  	
+	  	
 	  	<div class="main-text" id="contact">
 	  		<p>
 	  			Dr. Daniel Katz
