--- a/pages/fees.html
+++ b/pages/fees.html
@@ -45,7 +45,7 @@
 	  	    </div>
 	  	  </div>
 
-	  	  <ul class="options">
+	  	  <ul class="options disable_scrollbar">
 	  	    <li class="option">
 	  	      <a href="../index.html"><span class="option-text">Home</span></a>
 	  	    </li>
@@ -54,6 +54,9 @@
 	  	    </li>
 	  	    <li class="option">
 	  	      <a href="services.html"><span class="option-text">Services</span></a>
+	  	    </li>
+	  	    <li class="option">
+	  	      <a href="fees.html"><span class="option-text">Coverage & Fees</span></a>
 	  	    </li>
 	  	    <li class="option">
 	  	      <a href="media.html"><span class="option-text">Media</span></a>
@@ -65,7 +68,7 @@
 	  	      <a href="contact.html"><span class="option-text">Contact</span></a>
 	  	    </li>
 	  	  </ul>
-	  	</div>
+	  	</div>  
 
 	  	<div class="main-text">
 	  		<p>
