--- a/pages/media.html
+++ b/pages/media.html
@@ -45,7 +45,7 @@
 	  	    </div>
 	  	  </div>
 
-	  	  <ul class="options">
+	  	  <ul class="options disable_scrollbar">
 	  	    <li class="option">
 	  	      <a href="../index.html"><span class="option-text">Home</span></a>
 	  	    </li>
@@ -59,6 +59,9 @@
 	  	      <a href="fees.html"><span class="option-text">Coverage & Fees</span></a>
 	  	    </li>
 	  	    <li class="option">
+	  	      <a href="media.html"><span class="option-text">Media</span></a>
+	  	    </li>
+	  	    <li class="option">
 	  	      <a href="faq.html"><span class="option-text">FAQ</span></a>
 	  	    </li>
 	  	    <li class="option">
@@ -66,10 +69,10 @@
 	  	    </li>
 	  	  </ul>
 	  	</div>
-
+	  	  
 	  	<div class="main-text">
 	  		<p>
-	  			<span style="font-style:italic;">Featured in:</span>
+	  			<span style="font-style:italic;margin-left:10vw;">Featured in:</span>
 	  			<div class="media_link">
 	  				<a href="https://parade.com/living/traits-of-type-a-people-according-to-psychologists" target="_blank"><img src="../img/parade.png" alt=""></a>
 	  			</div>
