--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	  	    </div>
 	  	  </div>
 
-	  	  <ul class="options">
+	  	  <ul class="options disable_scrollbar">
 	  	    <li class="option">
 	  	      <a href="pages/about.html"><span class="option-text">About</span></a>
 	  	    </li>
