--- a/pages/services.html
+++ b/pages/services.html
@@ -45,12 +45,15 @@
 	  	    </div>
 	  	  </div>
 
-	  	  <ul class="options">
+	  	  <ul class="options disable_scrollbar">
 	  	    <li class="option">
 	  	      <a href="../index.html"><span class="option-text">Home</span></a>
 	  	    </li>
 	  	    <li class="option">
 	  	      <a href="about.html"><span class="option-text">About</span></a>
+	  	    </li>
+	  	    <li class="option">
+	  	      <a href="services.html"><span class="option-text">Services</span></a>
 	  	    </li>
 	  	    <li class="option">
 	  	      <a href="fees.html"><span class="option-text">Coverage & Fees</span></a>
@@ -65,12 +68,11 @@
 	  	      <a href="contact.html"><span class="option-text">Contact</span></a>
 	  	    </li>
 	  	  </ul>
-	  	</div>
+	  	</div>  
 
 	  	<div class="main-text">
 	  		<p>
 	  			<div class="services_headers">Individual Therapy</div>
-	  			<!-- <img id="services_img01" src="../img/collage-04.jpg" alt=""> -->
 	  			I work with adolescents, young adults, and adults who want to understand themselves more deeply and discover a more meaningful, fulfilling life. Together, we identify obstacles and form insights and strategies to move forward &mdash; in relationships, career, or personal growth.
 	  			I have a particular interest in working with:
 	  			<br><br>
@@ -98,7 +100,6 @@
 
 
 	  			<div class="services_headers">Couples Therapy</div>
-	  			<!-- <img id="services_img02" src="../img/collage-02.jpg" alt=""> -->
 	  			I trained extensively in couples therapy at the prestigious <span style="font-style:italic;">Family Institute</span> at Northwestern University. I primarily draw from Emotionally Focused Therapy (EFT), which helps couples identify, express, and respond to each other’s emotional experiences in the moment. EFT focuses on deepening emotional connection, improving communication, and creating a secure, supportive bond between partners.
 	  			<br><br>
 	  			I start with a four-session intake process, meeting with couples together and then individually. This helps me better understand your relationship dynamics and clarify your goals for therapy.
@@ -107,7 +108,6 @@
 	  			<hr style="margin-bottom:2em;opacity:0.3;">
 
 	  			<div class="services_headers">Group Therapy</div>
-	  			<!-- <img id="services_img03" src="../img/collage-05.jpg" alt=""> -->
 	  			I’m excited to be opening multiple interpersonal process groups in the near future. These groups will provide a supportive environment to explore relationship patterns, communication, and emotional growth with others. Stay tuned for more details!
 	  			<br><br><br><br><br><br><br><br><br>
 	  		</p>
