--- a/pages/about.html
+++ b/pages/about.html
@@ -82,8 +82,10 @@
 				<br><br>
 
 
-				Today, I draw from a range of evidence-based approaches—Acceptance and Commitment Therapy, psychodynamic therapy, Emotionally Focused Therapy, and Internal Family Systems. My philosophy is straightforward: focus on the individual, identify what is helpful together, and adapt as we learn more.
+				Today, I draw from a range of evidence-based approaches&mdash;Acceptance and Commitment Therapy, psychodynamic therapy, Emotionally Focused Therapy, and Internal Family Systems. My philosophy is straightforward: focus on the individual, identify what is helpful together, and adapt as we learn more.
  				<br><br>
+
+ 				<span style="display:block;text-align:right;">- Dr. Daniel Katz</span>
 
 				<hr style="opacity:0.3;">
 			</p>
