--- a/pages/contact.html
+++ b/pages/contact.html
@@ -72,19 +72,24 @@
 	  	
 	  	<div class="main-text" id="contact">
 	  		<p>
-	  			Dr. Daniel Katz
+	  			The best way to reach me is via email; I respond within 48 hours. You are also welcome to schedule a session directly via my <a href="https://care.headway.co/providers/daniel-katz" target="_blank" style="text-decoration:none;color:#222"><span class="headway" style="font-weight:bold;font-style:italic;">Headway</span></a> page.
+	  			<br><br>
+	  			<span style="font-weight:bold;">Email</span>
 	  			<br>
 	  			<a href="mailto:info@danielkatztherapy.com">info@danielkatztherapy.com</a>
+	  			<br><br>
+	  			<span style="font-weight:bold;">Phone</span>
 	  			<br>
 	  			<a id="phone_number" href="tel:8722428350">872-242-8350</a>
 	  			<br><br>
+	  			<span style="font-weight:bold;">Office Address</span>
+	  			<br>
 	  			1218 Massachusetts Avenue
 	  			<br>
 	  			Suite 3
 	  			<br>
 	  			Cambridge, MA 02138
-	  			<br><br><br>
-	  			You are also welcome to schedule a session via my <a href="https://care.headway.co/providers/daniel-katz" target="_blank" style="text-decoration:none;color:#222"><span class="headway" style="font-weight:bold;font-style:italic;">Headway</span></a> page.
+	  			<br><br>
 	  		</p>
 	  	</div>
 		
