--- a/pages/faq.html
+++ b/pages/faq.html
@@ -73,7 +73,7 @@
 	  	<div class="main-text">
 	  		<p>
 	  			<div class="faq_question">How does online therapy work?</div>
-	  			Surprisingly well! Clients consistently tell me how much they appreciate the comfort and convenience—no commute, your own space, and even pets or snacks within reach. Many find that being at home helps them relax and open up more easily.
+	  			Surprisingly well! Clients consistently tell me how much they appreciate the comfort and convenience&mdash;no commute, your own space, and even pets or snacks within reach. Many find that being at home helps them relax and open up more easily.
 	  			<br><br>
 
 
@@ -99,7 +99,7 @@
 
 
 	  			<div class="faq_question">What are your group therapy offerings?</div>
-	  			I’ll be starting multiple interpersonal process groups in the near future. Details will be posted once dates and times are confirmed—feel free to inquire or check back soon!
+	  			I’ll be starting multiple interpersonal process groups in the near future. Details will be posted once dates and times are confirmed&mdash;feel free to inquire or check back soon!
 	  			<br><br>
 
 
@@ -119,7 +119,7 @@
 
 
 	  			<div class="faq_question">What can I expect in our first session?</div>
-	  			In our first meeting, I’ll invite you to share a bit about your story, what led you to seek therapy, and any past therapy experiences you’ve had—what felt helpful, and what didn’t. My hope is that it feels conversational and warm, and that you get a sense of how I work. We’ll talk about what feels most important to you right now, how therapy might help, and whether this feels like a good fit.
+	  			In our first meeting, I’ll invite you to share a bit about your story, what led you to seek therapy, and any past therapy experiences you’ve had&mdash;what felt helpful, and what didn’t. My hope is that it feels conversational and warm, and that you get a sense of how I work. We’ll talk about what feels most important to you right now, how therapy might help, and whether this feels like a good fit.
 	  			<br><br>
 
 	  		</p>
