--- a/pages/services.html
+++ b/pages/services.html
@@ -73,7 +73,7 @@
 	  	<div class="main-text">
 	  		<p>
 	  			<div class="services_headers">Individual Therapy</div>
-	  			I work with adolescents, young adults, and adults who want to understand themselves more deeply and discover a more meaningful, fulfilling life. Together, we identify obstacles and form insights and strategies to move forward &mdash; in relationships, career, or personal growth.
+	  			I work with adolescents, young adults, and adults who want to understand themselves more deeply and discover a more meaningful, fulfilling life. Together, we identify obstacles and form insights and strategies to move forward&mdash;in relationships, career, or personal growth.
 	  			I have a particular interest in working with:
 	  			<br><br>
 
@@ -103,7 +103,7 @@
 	  			I trained extensively in couples therapy at the prestigious <span style="font-style:italic;">Family Institute</span> at Northwestern University. I primarily draw from Emotionally Focused Therapy (EFT), which helps couples identify, express, and respond to each other’s emotional experiences in the moment. EFT focuses on deepening emotional connection, improving communication, and creating a secure, supportive bond between partners.
 	  			<br><br>
 	  			I start with a four-session intake process, meeting with couples together and then individually. This helps me better understand your relationship dynamics and clarify your goals for therapy.
-	  			My philosophy is simple: <span style="font-style: italic;">let’s go with what works for you</span>. Some sessions focus on practical skills—like creating rules of engagement when conflict is high—while others focus on building intimacy, connection, and understanding. The goal is to strengthen the relationship while creating a safe and supportive space for both partners.
+	  			My philosophy is simple: <span style="font-style: italic;">let’s go with what works for you</span>. Some sessions focus on practical skills&mdash;like creating rules of engagement when conflict is high&mdash;while others focus on building intimacy, connection, and understanding. The goal is to strengthen the relationship while creating a safe and supportive space for both partners.
 	  			<br><br>
 	  			<hr style="margin-bottom:2em;opacity:0.3;">
 
