--- a/pages/media.html
+++ b/pages/media.html
@@ -74,13 +74,13 @@
 	  		<p>
 	  			<span style="font-style:italic;margin-left:10vw;">Featured in:</span>
 	  			<div class="media_link">
-	  				<a href="https://parade.com/living/traits-of-type-a-people-according-to-psychologists" target="_blank"><img src="../img/parade.png" alt=""></a>
+	  				<a href="https://parade.com/living/traits-of-type-a-people-according-to-psychologists" target="_blank"><img style="opacity:0.7;" src="../img/parade-02.png" alt=""></a>
 	  			</div>
 	  			<div class="media_link">
 	  				<a href="https://www.family-institute.org/behavioral-health-resources/four-myths-dispel-about-obsessive-compulsive-disorder-ocd" target="_blank"><img src="../img/family_institute.png" alt=""></a>
 	  			</div>
 	  			<div class="media_link">
-	  				<a href=""><img src="../img/cpa.png" alt=""></a>
+	  				<a href=""><img src="../img/cpa-02.png" alt=""></a>
 	  			</div>
 	  		</p>
 	  	</div>
