--- a/pages/about.html
+++ b/pages/about.html
@@ -78,7 +78,7 @@
 				I earned a doctorate in clinical psychology to deepen this ability and to learn how reflection, presence, and thoughtful guidance can support real change. Working in correctional and rehabilitation settings showed me that people need more than empathy; they often need practical tools and steady guidance. I broadened my approach with skills-based strategies and learned to gently challenge and offer alternative perspectives.
 				<br><br>
 				
-				During my residency at a psychiatric hospital in Massachusetts and later at Northwestern University’s <span style="font-style:italic;">The Family Institute</span>, I saw that while many struggles are shared, every person's lived experience is distinct. My work is to understand the <span style="font-style:italic;">whole person</span>, beyond a clinical description, and to tailor therapy to one's history, needs, temperament, and goals.
+				During my residency at a psychiatric hospital in Massachusetts and later at Northwestern University’s The Family Institute, I saw that while many struggles are shared, every person's lived experience is distinct. My work is to understand the <span style="font-style:italic;">whole person</span>, beyond a clinical description, and to tailor therapy to one's history, needs, temperament, and goals.
 				<br><br>
 
 
