--- a/pages/services.html
+++ b/pages/services.html
@@ -100,7 +100,7 @@
 
 
 	  			<div class="services_headers">Couples Therapy</div>
-	  			I trained extensively in couples therapy at the prestigious <span style="font-style:italic;">Family Institute</span> at Northwestern University. I primarily draw from Emotionally Focused Therapy (EFT), which helps couples identify, express, and respond to each other’s emotional experiences in the moment. EFT focuses on deepening emotional connection, improving communication, and creating a secure, supportive bond between partners.
+	  			I trained extensively in couples therapy at the prestigious Family Institute at Northwestern University. I primarily draw from Emotionally Focused Therapy (EFT), which helps couples identify, express, and respond to each other’s emotional experiences in the moment. EFT focuses on deepening emotional connection, improving communication, and creating a secure, supportive bond between partners.
 	  			<br><br>
 	  			I start with a four-session intake process, meeting with couples together and then individually. This helps me better understand your relationship dynamics and clarify your goals for therapy.
 	  			My philosophy is simple: <span style="font-style: italic;">let’s go with what works for you</span>. Some sessions focus on practical skills&mdash;like creating rules of engagement when conflict is high&mdash;while others focus on building intimacy, connection, and understanding. The goal is to strengthen the relationship while creating a safe and supportive space for both partners.
