--- a/pages/about.html
+++ b/pages/about.html
@@ -85,9 +85,17 @@
 				Today, I draw from a range of evidence-based approaches&mdash;Acceptance and Commitment Therapy, psychodynamic therapy, Emotionally Focused Therapy, and Internal Family Systems. My philosophy is straightforward: focus on the individual, identify what is helpful together, and adapt as we learn more.
  				<br><br>
 
- 				<span style="display:block;text-align:right;">- Dr. Daniel Katz</span>
-
+ 				<span style="display:block;text-align:right;">- Dr. Daniel Katz</span> <br>
 				<hr style="opacity:0.3;">
+ 				<!-- Training<br>  -->
+				Doctorate in Psychology (PsyD) University of Denver<br> 
+
+				Doctoral Residency in Clinical Psychology at Tewksbury Hospital<br> 
+
+				Postdoctoral Clinical Scholar Fellowship at The Family Institute at Northwestern University<br>
+
+				MA license: PSY10001776 
+
 			</p>
 	  	</div>
 		
