--- a/pages/about.html
+++ b/pages/about.html
@@ -92,7 +92,7 @@
 
 				Doctoral Residency in Clinical Psychology at Tewksbury Hospital<br> 
 
-				Postdoctoral Clinical Scholar Fellowship at The Family Institute at Northwestern University<br>
+				Postdoctoral Clinical Scholar Fellowship at The Family Institute, Northwestern University<br>
 
 				MA license: PSY10001776 
 
