--- a/pages/about.html
+++ b/pages/about.html
@@ -85,16 +85,17 @@
 				Today, I draw from a range of evidence-based approaches&mdash;Acceptance and Commitment Therapy, psychodynamic therapy, Emotionally Focused Therapy, and Internal Family Systems. My philosophy is straightforward: focus on the individual, identify what is helpful together, and adapt as we learn more.
  				<br><br>
 
- 				<span style="display:block;text-align:right;">- Dr. Daniel Katz</span> <br>
+ 				<span style="display:block;text-align:right;">- Dr. Daniel Katz</span> 
+
 				<hr style="opacity:0.3;">
- 				<!-- Training<br>  -->
-				Doctorate in Psychology (PsyD) University of Denver<br> 
+				
+				<span class="cred">Doctorate in Psychology (PsyD) University of Denver</span> 
 
-				Doctoral Residency in Clinical Psychology at Tewksbury Hospital<br> 
+				<span class="cred">Doctoral Residency in Clinical Psychology at Tewksbury Hospital</span> 
 
-				Postdoctoral Clinical Scholar Fellowship at The Family Institute, Northwestern University<br>
+				<span class="cred">Postdoctoral Clinical Scholar Fellowship at The Family Institute, Northwestern University</span>
 
-				MA license: PSY10001776 
+				<span class="cred">MA license: PSY10001776</span> 
 
 			</p>
 	  	</div>
